Refactor LabelFinderUI to improve rendering logic and enhance print functionality